2012-03-22  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52452
	* resolve.c (resolve_intrinsic): Don't search for a
	function if we know that it is a subroutine.

2012-03-22  Release Manager

	* GCC 4.7.0 released.

2012-03-10  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52469
	* trans-types.c (gfc_get_function_type): Handle backend_decl
	of a procedure pointer.

2012-02-29  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/52386
	* trans-expr.c (fcncall_realloc_result): Dereference the
	descriptor if needed.

2012-02-22  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52335
	* io.c (gfc_match_open): Remove bogus F2003 DELIM= check.

2012-02-18  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52295
	* interface.c (check_interface0): Internal procs in
	generic interfaces are allowed in Fortran 2008.

2012-02-17  Tobias Burnus  <burnus@net-b.de>
	    Roland Stigge  <stigge@antcom.de>

	PR translation/52273
	* interface.c (compare_actual_formal): Fix typo "at at".

2012-02-17  Tobias Burnus  <burnus@net-b.de>

	* gfortran.texi (Q exponent-letter): Fix grammar.

2012-02-17  Tobias Burnus  <burnus@net-b.de>

	* gfortran.texi (Status): Fix typos.
	* invoke.texi (ffixed-form, fstack-arrays): Spell Fortran with
	a majuscule.

2012-02-17  Tobias Burnus  <burnus@net-b.de>
	    Roland Stigge  <stigge@antcom.de>

	PR translation/52232
	PR translation/52234
	PR translation/52245
	PR translation/52246
	PR translation/52262
	PR translation/52273
	* io.c (gfc_match_open): Fix typo.
	* interface.c (compare_actual_formal): Ditto.
	* lang.opt (freal-4-real-8, freal-4-real-16, freal-8-real-16): Ditto.
	* match.c (alloc_opt_list, gfc_match_nullify): Ditto.
	* check.c (gfc_check_associated, gfc_check_null): Ditto.

2012-02-12  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/50981
	* trans-stmt.c (gfc_get_proc_ifc_for_call): New function.
	(gfc_trans_call): Use gfc_get_proc_ifc_for_call.

2012-02-12  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_walk_elemental_function_args,