@@ -1,3 +1,9 @@
+2012-04-07  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/52668
+	Backport from trunk
+	* gfortran.dg/use_only_6.f90: New test.
+
 2012-04-06  Mike Stump  <mikestump@comcast.net>
 
 	PR testsuite/50722
