@@ -1,3 +1,10 @@
+2012-04-07  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/52668
+	Backport from trunk
+	* module.c:  Only mark symbols as use_only if they have been
+	imported via an only list.
+
 2012-03-22  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/52452
